# slots-class

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/slots_class/: __init__.py  _base_info.py  _metadata.py  decorators.py  descriptor.py  exceptions.py  py_descriptor.py  slots_class.py  slots_class_meta.py
src/slots_class/_annotations/: __init__.py
tests/: test_creation.py  test_decorators.py
