[project]
name = "slots-class"
version = "0.1.0"
description = "A modern object model that uses __slots__"
readme = "README.md"
authors = [
    { name = "Marckie Zeender", email = "mkzeender@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
slots-class = "slots_class:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
